<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/rating_head"
        android:textSize="30sp"
        android:textColor="@color/colorPrimary"
        android:layout_margin="10dp"/>


    <RatingBar
        android:id="@+id/rating_stars"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:stepSize="0.5"
        android:numStars="5"
        android:layout_gravity="center"
        android:progressTint="@color/colorPrimary"
        android:layout_margin="20dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <Button
            android:id="@+id/doneRatingBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rate_done"
            android:layout_margin="10dp" />

        <Button
            android:id="@+id/notDoneRatingBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rate_not"
            android:layout_margin="10dp" />
    </LinearLayout>

</LinearLayout>