<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Common.Login_Signup.Welcome_Screen"
    android:background="@drawable/welcome_image">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:orientation="vertical">

            <TextView
                android:id="@+id/welcomeHeading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="140dp"
                android:gravity="center"
                android:text="@string/welcomeHeading"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/welcome_login_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:paddingLeft="80dp"
                android:paddingRight="80dp"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="19sp"
                android:textStyle="bold"
                android:elevation="10dp"
                android:onClick="login"/>

            <Button
                android:id="@+id/welcome_sign_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:background="@color/colorAccent"
                android:gravity="center"
                android:paddingLeft="72dp"
                android:paddingRight="72dp"
                android:text="@string/sign"
                android:textColor="@color/white"
                android:textSize="19sp"
                android:textStyle="bold"
                android:elevation="10dp"
                android:onClick="signUp"/>

        </LinearLayout>

</ScrollView>