<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/welcome_image"
    tools:context=".Common.Login_Signup.LoginScreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginVertical="120dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="24dp"
            android:textStyle="bold" />
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:hint="@string/user_email"
            android:textColorHint="@color/black"
            app:endIconMode="clear_text"
            app:hintTextColor="@color/black"
            app:startIconDrawable="@drawable/user_email_icon">

            <EditText
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:hint="@string/user_password"
            android:textColorHint="@color/black"
            app:endIconMode="password_toggle"
            app:hintTextColor="@color/black"
            app:startIconDrawable="@drawable/password_icon">

            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/forgetPassword"
            android:layout_marginHorizontal="20px"
            android:layout_toRightOf="@+id/remember_checkbox"
            android:gravity="center_horizontal" />

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="90dp"
            android:layout_marginTop="10dp"
            android:text="@string/login"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/login_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dont_have_btn"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textSize="14sp" />
    </LinearLayout>

















<!--   <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:orientation="vertical"-->
<!--        android:background="@color/colorPrimary"-->
<!--        android:padding="30dp"-->
<!--        android:layout_margin="20dp">-->


<!--       <ImageView-->
<!--           android:id="@+id/login_back_btn"-->
<!--           android:layout_width="match_parent"-->
<!--           android:layout_height="wrap_content"-->
<!--           android:src="@drawable/back_btn"-->
<!--           android:contentDescription="@string/back_btn" />-->




<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:orientation="vertical"-->
<!--            android:layout_marginTop="20dp">-->


<!--            <com.google.android.material.textfield.TextInputLayout-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->

<!--                android:hint="@string/user_email"-->
<!--                app:hintTextColor="@color/black"-->
<!--                app:boxStrokeColor="@color/black"-->
<!--                app:boxStrokeWidth="2dp"-->
<!--                app:boxBackgroundMode="outline"-->

<!--              app:hintAnimationEnabled="true"-->
<!--                app:hintEnabled="true"-->

<!--               >-->

<!--                <EditText-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="match_parent"-->
<!--                    android:textColor="@color/black"-->
<!--                    android:drawableStart="@drawable/user_email_icon"-->
<!--                    android:inputType="text"-->

<!--                    android:drawableLeft="@drawable/user_email_icon" />-->


<!--            </com.google.android.material.textfield.TextInputLayout>-->

<!--            <com.google.android.material.textfield.TextInputLayout-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->

<!--                android:hint="@string/user_password"-->
<!--                app:hintTextColor="@color/black"-->
<!--                app:boxStrokeColor="@color/black"-->
<!--                app:boxBackgroundMode="outline"-->
<!--                app:boxStrokeWidthFocused="2dp"-->
<!--                app:endIconMode="password_toggle"-->
<!--               >-->

<!--                <EditText-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="match_parent"-->
<!--                    android:textColor="@color/black"-->
<!--                    android:inputType="textPassword"-->
<!--                    android:drawableStart="@drawable/password_icon"-->
<!--                    android:drawableLeft="@drawable/password_icon" />-->


<!--            </com.google.android.material.textfield.TextInputLayout>-->

<!--            <RelativeLayout-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:orientation="horizontal"-->
<!--                android:layout_marginTop="10dp">-->

<!--                <CheckBox-->
<!--                    android:id="@+id/remember_checkbox"-->
<!--                    style="@style/Widget.AppCompat.CompoundButton.CheckBox"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_centerVertical="true"-->
<!--                    android:text="@string/remember"-->
<!--                    android:textColor="@color/black"-->
<!--                    android:textSize="12sp" />-->

<!--                <Button-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_alignParentEnd="true"-->
<!--                    android:layout_alignParentRight="true"-->
<!--                    android:background="#00000000"-->
<!--                    android:text="@string/forgetPassword"-->
<!--                    android:textAllCaps="false"-->
<!--                    android:textSize="12sp"-->
<!--                    android:layout_toRightOf="@+id/remember_checkbox"/>-->
<!--            </RelativeLayout>-->

<!--            <Button-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_gravity="center"-->
<!--                android:layout_marginTop="30dp"-->
<!--                android:background="@color/black"-->
<!--                android:gravity="center"-->
<!--                android:paddingLeft="80dp"-->
<!--                android:paddingRight="80dp"-->
<!--                android:text="@string/login"-->
<!--                android:textColor="@color/white"-->
<!--                android:textSize="19sp"-->
<!--                android:textStyle="bold" />-->


<!--            <LinearLayout-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:orientation="horizontal"-->
<!--                android:layout_gravity="center">-->


<!--                <TextView-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:background="#00000000"-->
<!--                    android:text="@string/dont_have_btn"-->
<!--                    android:layout_gravity="center"-->
<!--                    android:padding="10dp"/>-->

<!--                <Button-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:text="@string/sign"-->
<!--                    android:textAllCaps="false"-->
<!--                    android:layout_gravity="center"-->
<!--                    android:background="#00000000"/>-->
<!--            </LinearLayout>-->

<!--        </LinearLayout>-->


<!--    </LinearLayout>-->



     </LinearLayout>
